# MONA

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  celery_conf.py  celerybeat-schedule  loki-nodeport.yaml  main.py  ml.py  mypy.ini  pyproject.toml  requirements_ci.in  requirements_ci.txt  requirements_dev.in  requirements_dev.txt  requirenents_dev.txt  ruff.toml  tasks.py  terraform.tfstate  worker.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f6a881ec3876_initial_migration.py
docker/: .dockerignore  docker-compose.yml.legacy  dockerfile.celery  dockerfile.fastapi  dockerfile.react  nginx.conf  requirements_celery.txt  requirements_fastapi.in  requirements_fastapi.txt
frontend/: index.html
frontend/src/: Dashboard.tsx  DeviceAdmin.tsx  Login.tsx  ProtectedRoute.tsx  api.tsx  main.tsx
k8s/: celerybeat.yaml  celeryworker.yaml  fastapi.yaml  postgres.yaml  prometheus-config.yaml  prometheus.yaml  redis.yaml
mona-chart/: Chart.yaml  values-prod.yaml  values.yaml
mona-chart/templates/: _helpers.tpl  alerts.yaml  celery-beat-deployment.yaml  celery-worker-deployment.yaml  fastapi-deployment.yaml  fastapi-service.yaml  grafana_dashboard_fastapi.yaml  (+12 more)
mona_core/: celery_conf.py  db.py  main.py  ml.py  security.py  tasks.py  validators.py
py/: celery_conf.py  db.py  main.py  ml.py  tasks.py  worker.py
scripts/: setup_bash.sh  setup_ps.ps1
terraform/: main.tf  variables.tf
tests/: conftest.py  test_api.py  test_ml.py  test_tasks.py
yaml/: .terraform.lock.hcl  kind-cluster.yaml  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
