[project]
name = "mona"
version = "0.1.0"
description = "toml for mona project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.1",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "attr-defined"
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
ci = [
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "mypy>=2.2.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.51",
]
dev = [
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "numpy>=2.5.1",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pyyaml>=6.0.1",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "ruff>=0.15.21",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "scikit-learn>=1.9.0",
]
